# PitchSlap

./: .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: audio_controls.rs  audio_handler.rs  buffer.rs  config.rs  constants.rs  device.rs  engine.rs  globals.rs  mod.rs  stream.rs  utils.rs
src-tauri/src/audio/tests/: device_tests.rs  mod.rs
src-tauri/src/commands/: app_runner.rs  config_getter.rs  config_select.rs  devices_lists.rs  loopback.rs  mod.rs  modulation_conf.rs  switches.rs  visualizer.rs
src-tauri/src/dsp/: effect_factory.rs  effect_trait.rs  mod.rs  modulation_unit.rs  processor.rs  traits.rs  utils.rs
src-tauri/src/dsp/effects/: anime_voice.rs  chipmunk.rs  chorus.rs  demon.rs  mod.rs  reverb.rs  robo_voice.rs  testing_effect.rs
src-tauri/src/dsp/modules/: mod.rs
src-tauri/src/dsp/modules/auto_tune/: auto_tune.rs  mod.rs  pitch_shifter.rs
src-tauri/src/dsp/modules/chains/: filters_chain.rs  mod.rs  modulation_chain.rs
src-tauri/src/dsp/modules/effects/: amplifier.rs  auto_tune.rs  bitcrusher.rs  chorus.rs  distortion.rs  harmonics.rs  mod.rs  pitch_shifter.rs  reverb.rs  vibrato.rs  vocoder.rs
src-tauri/src/dsp/modules/filters/: all_pass.rs  band_pass.rs  biquad.rs  comb.rs  de_esser.rs  delay_lines.rs  high_pass.rs  high_shelf.rs  low_pass.rs  low_shelf.rs  mod.rs  moving_average.rs  noise_gate.rs  (+1 more)
src-tauri/src/dsp/processor/: audio_processor.rs  mod.rs
src-tauri/src/soundboard/: mod.rs  soundboard.rs
(+129 files in other folders)
