[package]
name = "pitchslap"
version = "0.1.0"
description = "App to modulate voice in real-time"
authors = ["Damian Kawerski"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pitchslap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = {version = "*", features = ["asio"] }
anyhow = "1.0"
hound = "3.5"
ringbuf = "0.4.1"
clap = { version = "4.0", features = ["derive"] }
fundsp = "0.20.0"
ctrlc = "*"
lazy_static = "*"
once_cell = "*"
